chore: fix nav items to be visible on mobile

--- a/assets/sass/docs.sass
+++ b/assets/sass/docs.sass
@@ -177,7 +177,7 @@ li.expanded > a > .navlist-caret
   border-radius: 10px
 
 .navbar-end a
-  color: white
+  color: #363636
 
 .navbar-item img
   transform: scale(1.5)
